# openapi-fastapi-client

./: README.md  README.rst  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
openapi_fastapi_client/: api.py  helpers.py  main.py  schema.py
tests/: conftest.py  test_api_cls.py  test_schema_cls.py
